happy-soup/unpackaged/unpackaged/objects/Animal__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caretaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caretaker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Animals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Endangered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Endangered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bear</fullName>
                </value>
                <value>
                    <fullName>Elephant</fullName>
                </value>
                <value>
                    <fullName>Giraffe</fullName>
                </value>
                <value>
                    <fullName>Gorilla</fullName>
                </value>
                <value>
                    <fullName>Lion</fullName>
                </value>
                <value>
                    <fullName>Parrot</fullName>
                </value>
                <value>
                    <fullName>Penguin</fullName>
                </value>
                <value>
                    <fullName>Tiger</fullName>
                </value>
                <value>
                    <fullName>Tortoise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zoo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zoo</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Zoo__c.Name</field>
                <operation>contains</operation>
                <value>Cleveland</value>
            </filterItems>
            <filterItems>
                <field>$Source.Quantity__c</field>
                <operation>lessOrEqual</operation>
                <valueField>Zoo__c.Capacity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Zoo__c</referenceTo>
        <relationshipLabel>Animals</relationshipLabel>
        <relationshipName>Animals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Animal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Animal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>